<resources>
    <string name="app_name">Time_Datepicker</string>
    <string name="qu_n_l_c_ng_vi_c_h_ng_tu_n">Quản lí công việc hằng tuần</string>
    <string name="c_ng_vi_c">Công việc:</string>
    <string name="nd">Nội Dung</string>
    <string name="ng_y_ht">Ngày HT</string>
    <string name="n_i_dung">Nội Dung:</string>
    <string name="ng_y_htC">Ngày HT:</string>
    <string name="date">DATE</string>
    <string name="gi_ht">Giờ HT:</string>
    <string name="time">TIME</string>
    <string name="th_m_cv">Thêm CV</string>
    <string name="danh_s_ch_c_ng_vi_c">Danh sách công việc</string>
</resources>
