<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dangb.time_datepicker.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qu_n_l_c_ng_vi_c_h_ng_tu_n"
        android:textAlignment="center"
        android:background="@color/green"
        android:textColor="@color/white" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_ng_vi_c" />

            <EditText
                android:id="@+id/editcongviec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_i_dung" />

            <EditText
                android:id="@+id/editnoidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="15" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="@string/ng_y_htC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="04/03/2018"
                android:textColor="@color/red"
                android:layout_weight="3"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/btndate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:text="@string/gi_ht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22:10:59"
                android:textColor="@color/red"
                android:layout_weight="3"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/btntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btncongviec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th_m_cv"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danh_s_ch_c_ng_vi_c"
        android:textAlignment="center"
        android:background="@color/green"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>
    <ListView
        android:id="@+id/lvcongviec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>
</LinearLayout>
